docs: tutorial 101 title screen section

--- a/docs/style.css
+++ b/docs/style.css
@@ -143,6 +143,8 @@ hr {
 pre {
     background-color: #e0e0e0;
     white-space: pre-wrap;
+    padding: 2px;
+    border: 1px solid #888;
 }
 
 noscript {
